--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -15,3 +15,12 @@
   opacity: 0.3;
 }
 
+.site-list {
+  padding-left: 0;
+  /*display: none;*/
+}
+
+.site-list__item {
+  padding: 30px 9px 30px 70px;
+  box-shadow: 0 1px 0 0 #ececec;
+}
