--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -34,3 +34,15 @@ img {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+body {
+  min-width: 320px;
+  margin: 0 auto;
+
+  font-family: "Open Sans", "Tahoma", sans-serif;
+  font-size: 15px;
+  font-weight: normal;
+  line-height: 1.6;
+  color: #444444;
+  outline: 1px solid #cccccc;
+}
