--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,20 +1,3 @@
-.promo__wrapper {
-  width: 260px;
-  margin: 0 auto;
-}
-
-.title-main {
-  margin-bottom: 5px;
-
-  font-family: $opensans;
-  font-size: 25px;
-  font-weight: bold;
-
-  line-height: 1.2;
-
-  color: $black;
-}
-
 .promo__week {
   font-family: $opensans;
   font-size: 17px;
@@ -49,12 +32,15 @@
   color: $greyish;
 }
 
-.promo__order:hover,
-.promo__order:focus {
-  color: #ffffff;
-  background-color: $greyish;
+.promo__order {
+  margin-bottom: 40px;
 }
 
-.promo__order:active {
-  color: rgba(255, 255, 255, 0.3);
+.specif-list {
+  border-collapse: collapse;
+}
+
+.specif-list__item td {
+  padding: 7px 35px 7px 0;
+  border-bottom: 1px solid #ececec;
 }
