--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -44,5 +44,23 @@ body {
   font-weight: normal;
   line-height: 1.6;
   color: #444444;
-  outline: 1px solid #cccccc;
+}
+
+.wrapper {
+  width: 260px;
+  margin: 0 auto;
+}
+
+.title-main {
+  margin: 0;
+  margin-top: 30px;
+  margin-bottom: 5px;
+
+  font-family: "Open Sans", "Tahoma", sans-serif;
+  font-size: 25px;
+  font-weight: bold;
+
+  line-height: 1.2;
+
+  color: #000000;
 }
