--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -9,13 +9,13 @@
 }
 
 .copyright__link--text {
-  font-family: $opensans;
+  font-family: "Open Sans", "Tahoma", sans-serif;
   font-size: 19px;
   font-weight: bold;
 
   line-height: 1;
 
-  color: $black;
+  color: #000000;
 }
 
 .copyright__link--img {
