--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -6,35 +6,35 @@
   padding-top: 15px;
   padding-bottom: 30px;
 
-  font-family: $opensans;
+  font-family: "Open Sans", "Tahoma", sans-serif;
   font-size: 15px;
   font-weight: normal;
 
   line-height: 2;
 
-  color: $greyish;
+  color: #444444;
 }
 
 .reviews__author-name {
   padding-bottom: 5px;
 
-  font-family: $opensans;
+  font-family: "Open Sans", "Tahoma", sans-serif;
   font-size: 17px;
   font-weight: bold;
 
   line-height: 1.4;
 
-  color: $black;
+  color: #000000;
 }
 
 .reviews__author-nickname {
-  font-family: $opensans;
+  font-family: "Open Sans", "Tahoma", sans-serif;
   font-size: 17px;
   font-weight: normal;
 
   line-height: 1.8;
 
-  color: $greyish;
+  color: #444444;
 }
 
 .reviews__nav {
