--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -6,13 +6,13 @@
 .advantages__item {
   padding: 30px 0;
 
-  font-family: $opensans;
+  font-family: "Open Sans", "Tahoma", sans-serif;
   font-size: 17px;
   font-weight: bold;
 
   line-height: 1.2;
 
-  color: $black;
+  color: #000000;
 }
 
 .advantages__item--ecology,
