--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,7 +1,7 @@
 .catalog-main__title {
   margin: 0;
 
-  font-family: $opensans;
+  font-family: "Open Sans", "Tahoma", sans-serif;
   font-size: 19px;
   font-weight: bold;
 
@@ -16,6 +16,7 @@
 
 .catalog-main {
   margin: 0;
+  margin-top: -70px;
   padding-left: 0;
 }
 
