--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,5 +1,5 @@
 .promo__week {
-  font-family: $opensans;
+  font-family: "Open Sans", "Tahoma", sans-serif;
   font-size: 17px;
   font-weight: bold;
 
@@ -22,14 +22,14 @@
   padding-top: 5px;
   padding-bottom: 25px;
 
-  font-family: $opensans;
+  font-family: "Open Sans", "Tahoma", sans-serif;
   font-size: 17px;
   font-weight: bold;
 
   line-height: 1.4;
   text-align: center;
 
-  color: $greyish;
+  color: #444444;
 }
 
 .promo__order {
