--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -1,9 +1,9 @@
 .site-list__link {
-  font-family: $opensans;
+  font-family: "Open Sans", "Tahoma", sans-serif;
   font-size: 17px;
   font-weight: bold;
   line-height: 1.4;
-  color: $black;
+  color: #000000;
 }
 
 .site-list__link:hover,
