--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,7 +1,6 @@
 @import "global/normalize.scss";
 @import "global/fonts.scss";
 @import "global/global.scss";
-@import "global/variables.scss";
 @import "blocks/page-header.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/page-main.scss";
@@ -14,3 +13,5 @@
 @import "blocks/page-footer.scss";
 @import "blocks/social.scss";
 @import "blocks/copyright.scss";
+@import "blocks/catalog-list.scss";
+@import "blocks/process.scss";
