--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -42,7 +42,7 @@
   margin-bottom: 35px;
 }
 
-.contacts__write {
+.contacts__link {
   display: block;
   margin-bottom: 40px;
   padding: 20px 53px;
