--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -22,8 +22,8 @@
   fill: #63d1bb;
 }
 
-.copyright__link--img:hover,
-.copyright__link--img:focus {
+.copyright__link:hover .copyright__link--img,
+.copyright__link:focus .copyright__link--img {
   fill: #46c1ae;
 }
 
