--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -75,7 +75,7 @@
   content: url("../img/icon-right-arrow.svg");
 }
 
-.reviews__write {
+.reviews__link {
   display: block;
   margin-bottom: 40px;
 }
