--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -32,7 +32,7 @@
   color: #444444;
 }
 
-.promo__order {
+.promo__button {
   margin-bottom: 40px;
 }
 
@@ -41,6 +41,6 @@
 }
 
 .specif-list__item td {
-  padding: 7px 35px 7px 0;
+  padding: 7px 30px 7px 0;
   border-bottom: 1px solid #ececec;
 }
