--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,3 +15,4 @@
 @import "blocks/copyright.scss";
 @import "blocks/catalog-list.scss";
 @import "blocks/process.scss";
+@import "blocks/order.scss";
