--- a/source/sass/blocks/catalog-list.scss
+++ b/source/sass/blocks/catalog-list.scss
@@ -9,12 +9,12 @@
   border: 1px solid #ececec;
 }
 
-.catalog-list__item--desc:hover,
-.catalog-list__item--desc:focus {
+.catalog-list__item:hover .catalog-list__item--desc,
+.catalog-list__item:focus .catalog-list__item--desc {
   box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
 }
 
-.catalog-list__item--desc:active {
+.catalog-list__item:active .catalog-list__item--desc {
   box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
 }
 
@@ -37,12 +37,12 @@
   color: #000000;
 }
 
-.catalog-list__name:hover,
-.catalog-list__name:focus {
+.catalog-list__item:hover .catalog-list__name,
+.catalog-list__item:focus .catalog-list__name {
   opacity: 0.6;
 }
 
-.catalog-list__name:active {
+.catalog-list__item:active .catalog-list__name {
   opacity: 0.3;
 }
 
@@ -84,12 +84,12 @@
   opacity: 0.2;
 }
 
-.catalog-list__button--cart:hover,
-.catalog-list__button--cart:focus {
+.catalog-list__item:hover .catalog-list__button--cart,
+.catalog-list__item:focus .catalog-list__button--cart {
   fill: #63d1bb;
   opacity: 1;
 }
 
-.catalog-list__button--cart:active {
+.catalog-list__item:active .catalog-list__button--cart {
   opacity: 0.3;
 }
