--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -1,3 +1,7 @@
+.reviews {
+  padding-bottom: 40px;
+}
+
 .reviews__block {
   margin: 0;
 }
@@ -38,7 +42,6 @@
 }
 
 .reviews__nav {
-  width: 260px;
   margin-top: 45px;
   margin-bottom: 60px;
   padding: 15px 25px;
@@ -77,5 +80,4 @@
 
 .reviews__link {
   display: block;
-  margin-bottom: 40px;
 }
