--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -64,3 +64,21 @@ body {
 
   color: #000000;
 }
+
+.title-inner {
+  font-family: "Open Sans", "Tahoma", sans-serif;
+  font-size: 17px;
+  font-weight: bold;
+
+  line-height: 1.4;
+
+  color: #000000;
+}
+
+.description-inner {
+  font-family: "Open Sans", "Tahoma", sans-serif;
+  font-size: 13px;
+  font-weight: normal;
+
+  color: #444444;
+}
