--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,3 +1,7 @@
+.contacts {
+  width: 100%;
+}
+
 .contacts__title {
   margin: 0;
   padding-top: 45px;
@@ -38,12 +42,13 @@
 }
 
 .contacts__map {
-  margin-left: -30px;
+  margin: 0;
   margin-bottom: 35px;
 }
 
 .contacts__link {
   display: block;
+  margin-left: 30px;
   margin-bottom: 40px;
   padding: 20px 53px;
 }
