--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -16,7 +16,7 @@
   color: #010000;
 }
 
-.page-main__title--index {
+.page-main__title-wrap {
   padding: 93px 35px 193px;
 
   background-image: url("../img/hero-mobile@1x.jpg");
@@ -24,7 +24,7 @@
   background-position: center;
 }
 
-.page-main__title--inner {
+.page-main__title-inner {
   padding: 75px 20px;
 
   background-color: #f1f1f1;
