--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,9 +1,14 @@
+.social {
+  margin: 0;
+  padding: 0;
+}
+
 .social__list {
   display: flex;
   justify-content: space-around;
   align-items: baseline;
-  margin: 0;
-  padding: 30px 50px;
+
+  padding: 25px 40px 20px;
 }
 
 .social__link {
