Корректировка стилизации index, catalog

--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -21,20 +21,14 @@
 
 .reviews__author-name {
   padding-bottom: 5px;
-
-  font-family: "Open Sans", "Tahoma", sans-serif;
-  font-size: 17px;
-  font-weight: bold;
-
-  line-height: 1.4;
-
-  color: #000000;
+  font-style: normal;
 }
 
 .reviews__author-nickname {
   font-family: "Open Sans", "Tahoma", sans-serif;
   font-size: 17px;
   font-weight: normal;
+  font-style: normal;
 
   line-height: 1.8;
 
