--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -7,8 +7,8 @@
 }
 
 .reviews__description {
-  padding-top: 15px;
-  padding-bottom: 30px;
+  padding-top: 10px;
+  padding-bottom: 25px;
 
   font-family: "Open Sans", "Tahoma", sans-serif;
   font-size: 15px;
@@ -36,15 +36,18 @@
 }
 
 .reviews__nav {
-  margin-top: 45px;
-  margin-bottom: 60px;
-  padding: 15px 25px;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
+  margin-bottom: 36px;
 
   border: 1px solid #ececec;
 }
 
 .reviews__btn {
-  width: 100px;
+  width: 130px;
+  padding-top: 15px;
+  padding-bottom: 10px;
 
   border: none;
   cursor: pointer;
