--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,10 +1,11 @@
 .advantages__list {
   margin: 0;
+  margin-bottom: 60px;
   padding-left: 0;
 }
 
 .advantages__item {
-  padding: 30px 0;
+  padding: 65px 0 0;
 
   font-family: "Open Sans", "Tahoma", sans-serif;
   font-size: 17px;
