--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -15,7 +15,6 @@
 }
 
 .promo__price {
-  padding-top: 5px;
   padding-bottom: 25px;
 
   text-align: center;
@@ -25,6 +24,10 @@
 
 .promo__button {
   margin-bottom: 40px;
+}
+
+.specif-list {
+  border-spacing: 0;
 }
 
 .specif-list__item td {
