--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -8,7 +8,7 @@
   justify-content: space-around;
   align-items: baseline;
 
-  padding: 25px 40px 20px;
+  padding: 25px 40px 0;
 }
 
 .social__link {
