--- a/source/sass/blocks/order.scss
+++ b/source/sass/blocks/order.scss
@@ -1,12 +1,12 @@
-.order__set {
+.order__description {
+  line-height: 1.8;
+}
+
+.order__field {
   margin: 0;
   padding: 0;
   border: none;
   border-top: 1px solid #63d1bb;
-}
-
-.order__description {
-  line-height: 1.8;
 }
 
 .order__name {
@@ -16,7 +16,7 @@
   color: #63d1bb;
 }
 
-.order__list {
+.order__set {
   margin: 0;
   padding: 0;
 }
@@ -27,7 +27,6 @@
   color: #000000;
 }
 
-.order__type-item,
-.order__color-item {
-  padding: 20px 0;
+.order-list__item {
+  padding: 25px 80px 25px 0;
 }
