--- a/source/sass/blocks/process.scss
+++ b/source/sass/blocks/process.scss
@@ -29,7 +29,17 @@
 }
 
 .process__video {
+  position: relative;
   font-size: 0;
+}
+
+.process__button {
+  position: absolute;
+  top: 35px;
+  left: 80px;
+
+  background-color: transparent;
+  border: none;
 }
 
 .process__wrap {
