Внесены изменения наставника

--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,3 +1,7 @@
+.promo {
+  padding-bottom: 36px;
+}
+
 .promo__week {
   line-height: 1.2;
   text-transform: uppercase;
@@ -20,10 +24,6 @@
   text-align: center;
 
   color: #444444;
-}
-
-.promo__button {
-  margin-bottom: 40px;
 }
 
 .specif-list {
