--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,6 +1,7 @@
 .contacts {
   width: 100%;
   margin-top: 40px;
+  padding-bottom: 35px;
 }
 
 .contacts__title {
@@ -38,20 +39,22 @@
   opacity: 0.3;
 }
 
-.contacts__address--wrap {
+.contacts__address-wrap {
   display: flex;
   margin-bottom: 40px;
 }
 
 .contacts__map {
   margin: 0;
-  margin-bottom: 25px;
+  margin-bottom: 30px;
+}
+
+.contacts__link-wrap {
+  padding-left: 30px;
 }
 
 .contacts__link {
   display: block;
-  margin-left: 30px;
-  margin-bottom: 40px;
   padding: 15px 53px;
 }
 
