--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -2,9 +2,9 @@
   width: 320px;
   margin: 0 auto;
 
-  background-color: #f1f1f1;
+  background-color: $white-1;
 }
 
 .page-footer__social {
-  border-bottom: 2px solid #ececec;
+  border-bottom: 2px solid $white-2;
 }
