--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -13,7 +13,7 @@
   line-height: 1.1;
   text-align: center;
 
-  color: #010000;
+  color: $black-1;
 }
 
 .page-main__title-wrap {
@@ -27,7 +27,7 @@
 .page-main__title-inner {
   padding: 75px 20px;
 
-  background-color: #f1f1f1;
+  background-color: $white-1;
 }
 
 .button {
@@ -40,16 +40,16 @@
   line-height: 1.2;
 
   text-transform: uppercase;
-  border: 2px solid #444444;
+  border: 2px solid $greyish-brown;
   cursor: pointer;
 
-  color: #444444;
+  color: $greyish-brown;
 }
 
 .button:hover,
 .button:focus {
-  color: #ffffff;
-  background-color: #444444;
+  color: $white;
+  background-color: $greyish-brown;
 }
 
 .button:active {
