--- a/source/sass/blocks/process.scss
+++ b/source/sass/blocks/process.scss
@@ -19,7 +19,7 @@
   background-repeat: no-repeat;
   background-position: 15%;
 
-  border: 1px solid #ececec;
+  border: 1px solid $white-2;
 }
 
 .process__title {
@@ -43,7 +43,7 @@
 .process__wrap {
   padding: 25px 48px 30px 35px;
 
-  border: 1px solid #ececec;
+  border: 1px solid $white-2;
 }
 
 .process__description {
