--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -13,12 +13,12 @@
 }
 
 .social__link {
-  fill: #231f20;
+  fill: $black-2;
 }
 
 .social__link:hover,
 .social__link:focus {
-  fill: #46c1ae;
+  fill: $greeny-blue-1;
 }
 
 .social__link:active {
