--- a/source/sass/blocks/catalog-list.scss
+++ b/source/sass/blocks/catalog-list.scss
@@ -6,7 +6,7 @@
 .catalog-list__desc {
   margin-top: -7px;
   padding: 0 30px;
-  border: 1px solid #ececec;
+  border: 1px solid $white-2;
 }
 
 .catalog-list__item:hover .catalog-list__desc,
@@ -43,7 +43,7 @@
   padding-bottom: 20px;
 
   line-height: 2.3;
-  box-shadow: 0 1px 0 0 #ececec;
+  box-shadow: 0 1px 0 0 $white-2;
 }
 
 .catalog-list__wrap {
@@ -56,7 +56,7 @@
 
 .catalog-list__price {
   font-weight: bold;
-  color: #000000;
+  color: $black;
 }
 
 .catalog-list__button {
@@ -72,7 +72,7 @@
 
 .catalog-list__item:hover .catalog-list__button--cart,
 .catalog-list__item:focus .catalog-list__button--cart {
-  fill: #63d1bb;
+  fill: $seafoam-blue;
   opacity: 1;
 }
 
