--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -6,7 +6,7 @@
   display: block;
   padding: 20px 115px;
 
-  box-shadow: 0 1px 0 0 #ececec;
+  box-shadow: 0 1px 0 0 $white-2;
 }
 
 .main-nav__toggle {
