--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -16,7 +16,7 @@
 
   line-height: 2;
 
-  color: #444444;
+  color: $greyish-brown;
 }
 
 .reviews__author-name {
@@ -32,7 +32,7 @@
 
   line-height: 1.8;
 
-  color: #444444;
+  color: $greyish-brown;
 }
 
 .reviews__nav {
@@ -41,7 +41,7 @@
   margin-top: 30px;
   margin-bottom: 36px;
 
-  border: 1px solid #ececec;
+  border: 1px solid $white-2;
 }
 
 .reviews__btn {
@@ -64,7 +64,7 @@
 }
 
 .reviews__btn--prev {
-  border-right: 1px solid #ececec;
+  border-right: 1px solid $white-2;
 }
 
 .reviews__btn--prev::before {
