--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,6 +1,7 @@
 @import "global/normalize.scss";
 @import "global/fonts.scss";
 @import "global/global.scss";
+@import "global/variables.scss";
 @import "blocks/page-header.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/page-main.scss";
