--- a/source/sass/blocks/order.scss
+++ b/source/sass/blocks/order.scss
@@ -72,24 +72,6 @@
   cursor: pointer;
 }
 
-.order__input-user {
-  width: 260px;
-  padding: 15px 0;
-  border: none;
-  border-bottom: 2px solid $black;
-}
-
-.order__input-user::placeholder {
-  font-family: "Open Sans", "Tahoma", sans-serif;
-  font-size: 17px;
-  font-weight: normal;
-
-  line-height: 1;
-
-  color: $greyish-brown;
-  opacity: 0.3;
-}
-
 .order__input {
   position: absolute;
   overflow: hidden;
@@ -122,10 +104,17 @@
   background-position: center;
 }
 
+.order__input:hover + .order__box--check,
+.order__input:hover + .order__box--radio,
 .order__input:focus + .order__box--check,
 .order__input:focus + .order__box--radio {
+  border: 2px solid $seafoam-blue-2;
+}
+
+.order__input:active + .order__box--check,
+.order__input:active + .order__box--radio {
   border: 2px solid $greyish-brown;
-  box-shadow: 0 0 0 4px $seafoam-blue;
+  opacity: 0.3;
 }
 
 .order__input:disabled + .order__box--check,
@@ -136,6 +125,61 @@
 .order__input:checked:disabled + .order__box--check,
 .order__input:checked:disabled + .order__box--radio {
   box-shadow: 0 0 0 4px $grey;
+}
+
+.order__input-user {
+  width: 260px;
+  padding: 15px 0;
+  border: none;
+  border-bottom: 2px solid $black;
+}
+
+.order__textarea {
+  height: 140px;
+  margin-top: 30px;
+  border: 2px solid $greyish-brown;
+  resize: none;
+}
+
+.order__input-user::placeholder {
+  font-family: "Open Sans", "Tahoma", sans-serif;
+  font-size: 17px;
+  font-weight: normal;
+
+  line-height: 1;
+
+  color: $greyish-brown;
+  opacity: 0.3;
+}
+
+.order__icon {
+  position: relative;
+}
+
+.order__icon--tel,
+.order__icon--mail {
+  position: absolute;
+  bottom: 0;
+  right: 5px;
+  opacity: 0.2;
+}
+
+.order__sign-user:hover .order__input-user,
+.order__sign-user:active .order__input-user {
+  border-bottom: 2px solid $seafoam-blue-2;
+}
+
+.order__sign-user:hover .order__icon--tel,
+.order__sign-user:hover .order__icon--mail,
+.order__sign-user:active .order__icon--tel,
+.order__sign-user:active .order__icon--mail {
+  fill: $seafoam-blue-2;
+  opacity: 1;
+}
+
+.order__textarea:hover,
+.order__textarea:active {
+  border: 2px solid $seafoam-blue-2;
 }
 
 .order__note {
