--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -21,8 +21,11 @@
 }
 
 .catalog-main__link {
-  display: block;
+  width: 320px;
+  margin: 0 auto;
   padding: 27px 185px 27px 28px;
+
+  display: block;
 }
 
 .catalog-main__item--interior {
