--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -1,10 +1,11 @@
 .page-main {
-  width: 320px;
+  width: 100%;
   margin: 0 auto;
 }
 
 .page-main__title {
-  margin: 0;
+  width: 250px;
+  margin: 0 auto;
 
   font-family: "Open Sans", "Tahoma", sans-serif;
   font-size: 27px;
