--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,7 +1,10 @@
 .contacts {
-  width: 100%;
   margin-top: 40px;
-  padding-bottom: 35px;
+}
+
+.contacts__wrapper {
+  width: 320px;
+  margin: 0 auto;
 }
 
 .contacts__title {
@@ -44,16 +47,6 @@
   margin-bottom: 40px;
 }
 
-.contacts__map {
-  margin: 0;
-  margin-bottom: 30px;
-}
-
-.contacts__link {
-  display: block;
-  padding: 15px 53px;
-}
-
 .contacts__label {
   padding-right: 30px;
 }
@@ -63,4 +56,15 @@
   margin-top: 0;
 
   line-height: 2;
+}
+
+.contacts__map {
+  margin: 0;
+}
+
+.contacts__link {
+  display: block;
+  margin-left: 30px;
+  margin-top: 30px;
+  padding: 15px 53px;
 }
