--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -20,6 +20,7 @@
 .page-main__title-wrap {
   padding: 93px 35px 193px;
 
+  background-color: $grey-1;
   background-image: url("../img/hero-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: center;
@@ -56,4 +57,17 @@
 
 .button:active {
   color: rgba(255, 255, 255, 0.3);
+}
+
+@media (min-width: 768px) {
+  .page-main__title-wrap {
+    height: 746px;
+    padding-top: 160px;
+    background-image: url("../img/hero-tablet@1x.jpg");
+  }
+
+  .page-main__title {
+    width: 500px;
+    font-size: 43px;
+  }
 }
