--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -34,3 +34,57 @@
   padding: 7px 30px 7px 0;
   border-bottom: 1px solid $white-2;
 }
+
+@media (min-width: 768px) {
+  .promo__title-wrap {
+    width: 100%;
+    height: 45px;
+    margin-top: 50px;
+    margin-bottom: 30px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .promo__week {
+    width: 70px;
+    margin-right: 30px;
+    text-align: center;
+  }
+
+  .promo__wrapper {
+    padding-bottom: 50px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .promo__description-wrap {
+    width: 292px;
+    margin-right: 50px;
+  }
+
+  .promo__description {
+    padding-bottom: 40px;
+    font-size: 17px;
+    line-height: 1.8;
+  }
+
+  .specif-list__item td {
+    padding: 7px 45px 7px 0;
+  }
+
+  .promo__price-wrap {
+    margin-top: -40px;
+  }
+
+  .promo__price {
+    font-size: 20px;
+    line-height: 1.2;
+  }
+
+  .promo__button {
+    width: 292px;
+    margin-top: 7px;
+  }
+}
