--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -24,3 +24,13 @@
 .social__link:active {
   opacity: 0.3;
 }
+
+@media (min-width: 768px) {
+  .social__list {
+    padding: 0;
+  }
+
+  .social__item:not(:last-child) {
+    padding-right: 40px;
+  }
+}
