--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -4,6 +4,7 @@ $white: #ffffff;
 $white-1: #f1f1f1;
 $white-2: #ececec;
 $grey: #989898;
+$grey-1: #fbfbfb;
 $black: #000000;
 $black-1: #010000;
 $black-2: #231f20;
