--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -84,14 +84,18 @@
 }
 
 @media (min-width: 768px) {
-  .catalog-inner {
-    padding-top: 80px;
-  }
-
   .catalog-main {
     display: flex;
     justify-content: center;
-    margin-top: -117px;
+    margin-top: -128px;
+  }
+
+  .catalog-main__title {
+    width: 110px;
+    margin: 0;
+
+    font-size: 20px;
+    line-height: 1.5;
   }
 
   .catalog-main__link {
@@ -101,5 +105,11 @@
 
   .catalog-main__link:hover {
     padding: 29px 185px 39px 35px;
+  }
+}
+
+@media (min-width: 1150px) {
+  .catalog-main__link {
+    width: 525px;
   }
 }
