--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -81,8 +81,82 @@
 
 @media (min-width: 768px) {
   .reviews__wrapper {
+    position: relative;
+
+    width: 768px;
     height: 530px;
+    padding-top: 80px;
+    padding-left: 50px;
+
     background-image: url("../img/review@1x.jpg");
     background-repeat: no-repeat;
+  }
+
+  .reviews__description {
+    padding: 35px 0 60px;
+    font-size: 17px;
+    line-height: 1.8;
+  }
+
+  .reviews__author {
+    width: 305px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .reviews__author-name {
+    padding-bottom: 0;
+    font-size: 18px;
+    line-height: 1.3;
+  }
+
+  .reviews__link {
+    position: absolute;
+    top: 105px;
+    right: 50px;
+
+    width: 175px;
+    padding: 15px 0;
+    text-align: center;
+  }
+
+  .reviews__nav {
+    position: absolute;
+    top: 355px;
+    right: 50px;
+    width: 175px;
+    border: none;
+  }
+
+  .reviews__btn--prev {
+    border-right: none;
+  }
+}
+
+@media (min-width: 1150px) {
+  .reviews__wrapper {
+    width: 1150px;
+    padding-top: 40px;
+    padding-left: 175px;
+    padding-right: 175px;
+  }
+
+  .reviews__description {
+    padding-top: 35px;
+    padding-bottom: 40px;
+  }
+
+  .reviews__author {
+    width: 350px;
+  }
+
+  .reviews__link {
+    top: 75px;
+    right: 95px;
+  }
+
+  .reviews__nav {
+    top: 275px;
+    right: 95px;
   }
 }
