--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -28,13 +28,11 @@
   margin: 0;
   padding-left: 0;
   /*display: none;*/
-  outline: 1px solid red;
 }
 
 .site-list__item {
   padding: 30px 9px 30px 70px;
   box-shadow: 0 1px 0 0 $white-2;
-  outline: 1px solid green;
 }
 
 .site-list__item--search,
@@ -45,7 +43,7 @@
 @media (min-width: 768px) {
   .site-list {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
   }
 
   .site-list__item {
