--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,18 +2,25 @@
 @import "global/fonts.scss";
 @import "global/global.scss";
 @import "global/variables.scss";
+@import "blocks/wrapper.scss";
+@import "blocks/button.scss";
+@import "blocks/title-main.scss";
+@import "blocks/title-inner.scss";
+@import "blocks/description-inner.scss";
 @import "blocks/page-header.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/page-main.scss";
 @import "blocks/site-list.scss";
 @import "blocks/catalog.scss";
 @import "blocks/promo.scss";
+@import "blocks/specif-list.scss";
 @import "blocks/advantages.scss";
 @import "blocks/reviews.scss";
 @import "blocks/contacts.scss";
 @import "blocks/page-footer.scss";
 @import "blocks/social.scss";
 @import "blocks/copyright.scss";
+@import "blocks/catalog-inner.scss";
 @import "blocks/catalog-list.scss";
 @import "blocks/process.scss";
 @import "blocks/order.scss";
