--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,4 +1,4 @@
-.title-main--advantages {
+.advantages__title {
   margin-bottom: 35px;
 }
 
@@ -69,7 +69,7 @@
 
 @media (min-width: 768px) {
   .advantages__wrapper {
-    padding-top: 35px;
+    padding-top: 0;
   }
 
   .advantages__list {
@@ -92,7 +92,6 @@
 
 @media (min-width: 1150px) {
   .advantages__wrapper {
-    padding-left: 125px;
-    padding-right: 225px;
+    padding: 40px 175px 0;
   }
 }
