--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,5 +1,5 @@
 .contacts {
-  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .contacts__title {
@@ -71,6 +71,10 @@
 }
 
 @media (min-width: 768px) {
+  .contacts__wrapper {
+    padding-top: 30px;
+  }
+
   .contacts__block {
     display: flex;
     flex-wrap: wrap;
@@ -80,8 +84,8 @@
 
   .contacts__title {
     width: 100%;
-    margin-bottom: 25px;
-    padding: 30px 0;
+    margin-bottom: 17px;
+    padding: 37px 0;
 
     font-size: 43px;
     line-height: 1;
@@ -115,19 +119,17 @@
 }
 
 @media (min-width: 1150px) {
-  .contacts {
-    height: 500px;
-    margin-bottom: 30px;
-  }
-
   .contacts__wrapper {
+    padding-top: 60px;
+
     position: relative;
     display: flex;
   }
 
   .contacts__block {
-    padding-top: 75px;
-    padding-left: 175px;
+    height: 410px;
+    padding-top: 70px;
+    padding-left: 170px;
 
     flex-basis: 50%;
   }
@@ -138,14 +140,22 @@
 
   .contacts__title {
     width: 270px;
-    padding-top: 0;
+    height: 50px;
+    margin-bottom: 0;
+    padding: 0;
     font-size: 53px;
+  }
+
+  .contacts__link-wrap {
+    padding: 0;
   }
 
   .contacts__link {
     position: relative;
     z-index: 1;
     right: 240px;
-    bottom: 110px;
+    bottom: 60px;
+
+    margin-top: 0;
   }
 }
