--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -29,9 +29,8 @@
 @media (min-width: 768px) {
   .promo__title-wrap {
     width: 100%;
-    height: 45px;
-    margin-top: 50px;
-    margin-bottom: 30px;
+    margin-bottom: 25px;
+    padding-top: 15px;
 
     display: flex;
     justify-content: space-between;
@@ -40,7 +39,8 @@
 
   .promo__week {
     width: 70px;
-    margin-right: 30px;
+    margin-right: 25px;
+    padding-top: 20px;
     text-align: center;
   }
 
@@ -73,5 +73,16 @@
   .promo__button {
     width: 292px;
     margin-top: 7px;
+  }
+}
+
+@media (min-width: 1150px) {
+  .promo__wrapper {
+    padding-top: 70px;
+    padding-left: 170px;
+  }
+
+  .promo__price-wrap {
+    margin-top: 25px;
   }
 }
