--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -80,16 +80,20 @@
 }
 
 @media (min-width: 768px) {
-  .reviews__wrapper {
-    position: relative;
-
+  .reviews {
     width: 768px;
-    height: 530px;
-    padding-top: 80px;
-    padding-left: 50px;
+    margin: 0 auto;
+    padding-bottom: 0;
 
     background-image: url("../img/review@1x.jpg");
     background-repeat: no-repeat;
+  }
+
+  .reviews__wrapper {
+    position: relative;
+
+    height: 530px;
+    padding-top: 50px;
   }
 
   .reviews__description {
@@ -112,8 +116,8 @@
 
   .reviews__link {
     position: absolute;
-    top: 105px;
-    right: 50px;
+    top: 80px;
+    right: 0;
 
     width: 175px;
     padding: 15px 0;
@@ -122,8 +126,9 @@
 
   .reviews__nav {
     position: absolute;
-    top: 355px;
-    right: 50px;
+    bottom: 85px;
+    right: 0;
+
     width: 175px;
     border: none;
   }
@@ -134,15 +139,19 @@
 }
 
 @media (min-width: 1150px) {
-  .reviews__wrapper {
+  .reviews {
     width: 1150px;
-    padding-top: 40px;
+    margin: 0 auto;
+    margin-bottom: 30px;
+  }
+
+  .reviews__wrapper {
+    padding-top: 45px;
     padding-left: 175px;
-    padding-right: 175px;
+    padding-right: 75px;
   }
 
   .reviews__description {
-    padding-top: 35px;
     padding-bottom: 40px;
   }
 
@@ -151,12 +160,12 @@
   }
 
   .reviews__link {
-    top: 75px;
-    right: 95px;
+    top: 80px;
+    right: 0;
   }
 
   .reviews__nav {
-    top: 275px;
-    right: 95px;
+    bottom: 140px;
+    right: 0;
   }
 }
