--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,7 +11,7 @@
 @import "blocks/main-nav.scss";
 @import "blocks/page-main.scss";
 @import "blocks/site-list.scss";
-@import "blocks/catalog.scss";
+@import "blocks/catalog-main.scss";
 @import "blocks/promo.scss";
 @import "blocks/specif-list.scss";
 @import "blocks/advantages.scss";
